--- a/commands/Get-VPASAllDirectories.html
+++ b/commands/Get-VPASAllDirectories.html
@@ -452,8 +452,9 @@
 											<br>
 											<h1 style="text-align: left;">Outputs:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>JSON Object (AllDirectories) if successful</b></p></td></tr>
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>$false if failed</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>If successful:<br>{<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     "DomainName":  "vman.com",<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;     "DomainBaseContext":  "DC=vman,DC=com"<br>}<br></b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>
+$false if failed</b></p></td></tr>
 											</table>
 											</div>
 											
